--- a/{{cookiecutter.repo_name}}/.gitignore
+++ b/{{cookiecutter.repo_name}}/.gitignore
@@ -1,32 +1,19 @@
-# Basics
 *.py[cod]
 *.pyc
 __pycache__
-
-# Logs
 *.log
 pip-log.txt
-
-# Unit test / coverage reports
 .coverage
 .tox
 nosetests.xml
-
-# Translations
 *.mo
 *.pot
-
-# Pycharm
 .idea
-
-# Vim
-
 *~
 *.swp
 *.swo
-
-# npm
 node_modules/
-
-# Campass
 .sass-cache
+settings_local.py
+*.sqlite
+*.sqlite3
