--- a/{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/config/settings_local.py.example
+++ b/{{cookiecutter.repo_name}}/{{cookiecutter.project_name}}/config/settings_local.py.example
@@ -3,7 +3,7 @@ from settings import *
 DEBUG = True
 TEMPLATE_DEBUG = True
 
-SECRET_KEY = ''
+SECRET_KEY = '!!!change_me!!!'
 
 ALLOWED_HOSTS = ["*"]
 
