--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 *.log
 *.pot
-*.pyc
+*.py[co]
 local_settings.py
-repo_name
+/.idea/workspace.xml
+/.idea/tasks.xml
+/.idea/dictionaries
+/.vagrant
+/.cache
+*.TODO
